--- a/pages/TeamProfile.html
+++ b/pages/TeamProfile.html
@@ -112,17 +112,17 @@
           <br />
          Incident responders seek to protect and improve organizational security by preventing, averting, and mitigating security threats. Prevention duties include system monitoring, assessment, testing, and analysis designed to identify and correct potential security breaches. Incident responders often create security plans, policies, protocols, and training that prepare organizations to respond efficiently and effectively to incidents. Steps to become an incident responder : 
           <ol>
-            <li>    Bachelor's or master's degrees in computer forensics, cybersecurity, or a related field often provide ideal educational preparation for incident responders careers. For those seeking a career transition, earning your master's degree in information security or incident response management can position you well for eventually getting upper-level roles such as senior incident responder, senior intrusion analyst, or CSIRT manager. </li>
+            <li>Bachelor's or master's degrees in computer forensics, cybersecurity, or a related field often provide ideal educational preparation for incident responders careers. For those seeking a career transition, earning your master's degree in information security or incident response management can position you well for eventually getting upper-level roles such as senior incident responder, senior intrusion analyst, or CSIRT manager. </li>
             <br />
-            <li>     Many professionals in this skills-based field gain their cybersecurity education simply by earning relevant professional certifications such as certified incident handler, certified intrusion analyst, or certified forensic analyst. Regardless of the degree requirements, most incident responder jobs require some certifications. Keep in mind that certification requirements vary depending on position, employer, and industry. </li>
+            <li>Many professionals in this skills-based field gain their cybersecurity education simply by earning relevant professional certifications such as certified incident handler, certified intrusion analyst, or certified forensic analyst. Regardless of the degree requirements, most incident responder jobs require some certifications. Keep in mind that certification requirements vary depending on position, employer, and industry. </li>
             <br />
-            <li>     Someone who wants to become a Senior Incident Responder can benefit from doing an internship, giving them some practical experience in their chosen field and also allowing them to network within the forensic and cybersecurity fields. </li>
+            <li>Someone who wants to become a Senior Incident Responder can benefit from doing an internship, giving them some practical experience in their chosen field and also allowing them to network within the forensic and cybersecurity fields. </li>
             <br />
-            <li>     Most incident responder jobs require at least 2-3 years of prior relevant work experience in fields like computer forensics, cybersecurity, or network administration.   </li>
+            <li>Most incident responder jobs require at least 2-3 years of prior relevant work experience in fields like computer forensics, cybersecurity, or network administration.   </li>
             <br />
-            <li>     Incident responders need considerable applied knowledge and skills working with many kinds of systems. Comprehensive understanding of operating systems, hardware and software systems, and network systems are essential. Related hard skills include system monitoring tools, forensics software, and e-discovery tools. Incident responders also must understand programming languages to do the work often needed to address cybersecurity threats. </li>
+            <li>Incident responders need considerable applied knowledge and skills working with many kinds of systems. Comprehensive understanding of operating systems, hardware and software systems, and network systems are essential. Related hard skills include system monitoring tools, forensics software, and e-discovery tools. Incident responders also must understand programming languages to do the work often needed to address cybersecurity threats. </li>
             <br />
-            <li>     Cybersecurity degree programs cultivate skills through coursework in operating systems and information systems security, cybercrime forensics, and object-oriented programming. Aspiring incident responders interested in leadership positions benefit from courses on cybersecurity operations management, cybersecurity law and policy, and global trends. Other relevant courses include cyberwarfare and ethical hacking. </li>
+            <li>Cybersecurity degree programs cultivate skills through coursework in operating systems and information systems security, cybercrime forensics, and object-oriented programming. Aspiring incident responders interested in leadership positions benefit from courses on cybersecurity operations management, cybersecurity law and policy, and global trends. Other relevant courses include cyberwarfare and ethical hacking. </li>
           </ol>
         </p>
       </div>
@@ -157,17 +157,17 @@
           <br />
           IT project managers oversee and direct the activities of information technology projects, including managing personnel, overseeing budgets and schedules, and executing a project communication plan. Career Steps to Follow to become an IT project manager : 
           <ol>
-            <li>    IT project managers must possess at least a bachelor's degree in computer science, information technology or IT project management. The courses in this program covers topics like Database management systems, IT security, Management information systems, Project procurement management and Principles of project management. </li>
+            <li>IT project managers must possess at least a bachelor's degree in computer science, information technology or IT project management. The courses in this program covers topics like Database management systems, IT security, Management information systems, Project procurement management and Principles of project management. </li>
             <br />
-            <li>    Complete an internship. An internship allows students to interact with experienced IT project managers and complete some of the same tasks they will perform when working in the field. This experience and these networking opportunities may make it easier to find a position in IT project management immediately after graduation.  </li>
+            <li>Complete an internship. An internship allows students to interact with experienced IT project managers and complete some of the same tasks they will perform when working in the field. This experience and these networking opportunities may make it easier to find a position in IT project management immediately after graduation.  </li>
             <br />
-            <li>    Most computer and information systems managers have several years of work experience in the field of information technology. Employers often seek candidates who not only possess a bachelor's degree, but who also have experience working in project management or supervising individuals in an information technology department.  </li>
+            <li>Most computer and information systems managers have several years of work experience in the field of information technology. Employers often seek candidates who not only possess a bachelor's degree, but who also have experience working in project management or supervising individuals in an information technology department.  </li>
             <br />
-            <li>    After 3-5 years of experience working in an area related to IT project management, many individuals may be able to advance in their careers. IT project managers oversee IT projects by planning the project and managing staff.  </li>
+            <li>After 3-5 years of experience working in an area related to IT project management, many individuals may be able to advance in their careers. IT project managers oversee IT projects by planning the project and managing staff.  </li>
             <br />
-            <li>   To improve employment prospects, consider earning a master's degree.  </li>
+            <li>To improve employment prospects, consider earning a master's degree.  </li>
             <br />
-            <li>     With enough management experience, IT project managers can advance and become chief technology officers or even chief executives. </li>
+            <li>With enough management experience, IT project managers can advance and become chief technology officers or even chief executives. </li>
         </ol>
         </p>
       </div>
@@ -244,15 +244,15 @@
           <br />
           A Network Security Administrator identifies what type of computer network an organization needs. They install network hardware and software programs, monitor networks, collect data to analyse a network's operation, and train individuals on how to use the network. A good career plan to become a Network Security Administrator is :  
           <ol>
-            <li>    Obtain a Bachelor’s Degree, this is the traditional minimum degree preferred by prospective employers. A Bachelor’s Degree exposes students to a broader curriculum that provides a foundation in mathematics and computer science. Students also develop a comprehensive understanding of programming, software architecture, and software testing. In addition to a Batchelor’s Degree, they can also take specialized courses in application areas, such as Network security, Information technology diagnostics, Network design and Network communications </li>
+            <li>Obtain a Bachelor’s Degree, this is the traditional minimum degree preferred by prospective employers. A Bachelor’s Degree exposes students to a broader curriculum that provides a foundation in mathematics and computer science. Students also develop a comprehensive understanding of programming, software architecture, and software testing. In addition to a Batchelor’s Degree, they can also take specialized courses in application areas, such as Network security, Information technology diagnostics, Network design and Network communications </li>
             <br />
-            <li>    To improve the chances of getting employment, an internship can be helpful. An internship can allow hands-on experience working with computer networks and also give you the opportunity to network with other professionals in the field. This experience and the networking opportunities may make it easier to find employment after graduation.  </li>
+            <li>To improve the chances of getting employment, an internship can be helpful. An internship can allow hands-on experience working with computer networks and also give you the opportunity to network with other professionals in the field. This experience and the networking opportunities may make it easier to find employment after graduation.  </li>
             <br />
-            <li>     Obtain a job and work in the system administrator position to gain the necessary employment in order to work your way up to Network Security Administrator. Security Administrators may backup data contained on an organization's computer network, implement network security measures, monitor network performance, and discuss how to resolve network problems with workers who use the network. </li>
+            <li>Obtain a job and work in the system administrator position to gain the necessary employment in order to work your way up to Network Security Administrator. Security Administrators may backup data contained on an organization's computer network, implement network security measures, monitor network performance, and discuss how to resolve network problems with workers who use the network. </li>
             <br />
-            <li>    Earning professional certification demonstrates an individual's proficiency in managing specific computer network systems. Many companies prefer certifications, so this will open the door to more job opportunities. Industry companies, such as Cisco and CompTIA, offer certifications to network managers. These certifications, which include the Cisco Certified Network Professional and CompTIA Network+ certification, usually require passing an exam.   </li>
+            <li>Earning professional certification demonstrates an individual's proficiency in managing specific computer network systems. Many companies prefer certifications, so this will open the door to more job opportunities. Industry companies, such as Cisco and CompTIA, offer certifications to network managers. These certifications, which include the Cisco Certified Network Professional and CompTIA Network+ certification, usually require passing an exam.   </li>
             <br />
-            <li>     It is also important to maintain technical skills. The hardware and software programs and computer systems used in network technology and management are constantly changing. Network Security Administrators can remain competitive by staying abreast of the latest technology. </li>
+            <li>It is also important to maintain technical skills. The hardware and software programs and computer systems used in network technology and management are constantly changing. Network Security Administrators can remain competitive by staying abreast of the latest technology. </li>
           </ol>
         </p>
       </div>
@@ -278,15 +278,25 @@
         Team: Creative Protocol 
         <br />
         <br />
-        <!-- Insert Introduction Here, see William's tab for an example --></p>
+        <p>I am currently 20 years old and working in the Australian army as a rifleman. I currently reside in Townsville but am originally from Melbourne. I completed year 12 in 2017 and have decided that I need to continue my learning and learn about something I am passionate about. My favourite activity to do in my spare time is canoe slalom, which is a field of white-water kayaking. My interest in IT started from a young age I had a relative who worked at apple and always had the newest computers and phones, from that young age I was hooked with all things technology. This love continued as I got into high school and was able to study multimedia in my earlier years, then during my VCE, study software engineering, which is when I realised that I wanted to make some sort of career out of it. My current career has lead me into signals and radios which has given me a different experience in networking and IP while also exposing me to how many different technologies and systems work and connect together to share data and information around the world securely and undetected. </p>
         <br />
         <h3>Career Plans</h3>
         <p>
-          <b><!-- Job Title Goes Here --></b>
-          <!-- Job Description Goes Here -->
+          <b>Cameron McLaughlan - Software Engineer </b>
+          <br />
+          Software engineering is an ever-changing profession, one that adapts as new technologies are developed. Because of its shifting nature, there are multiple entry points into the profession. A good career plan to become a software engineer is : 
           <ol>
-            <li></li>
+            <li>Obtain a Bachelor’s Degree, this is the traditional minimum degree preferred by prospective employers. A Bachelor’s Degree exposes students to a broader curriculum that provides a foundation in mathematics and computer science. Students also develop a comprehensive understanding of programming, software architecture, and software testing. In addition to a Batchelor’s Degree, they can also take specialized courses in application areas, such as networking or embedded systems. </li>
             <br />
+            <li>Doing an internship, this can provide students with real world experience. Technology companies may offer internships for students with a bachelor’s who want to expand their skills in specific areas, such as Java, XML or SQL. Internships normally last between three and six months and allow students to work on specific projects or products related to their skills. </li>
+            <br />
+            <li>Generally speaking, there are two specializations within software engineering: applications and software/systems development. However, distinct areas of practice exist within each of these areas. Software engineers may choose to become experts in a single programming language or type of development. Some examples of speciality areas are Web development, DevOps, Mobile development and Technical stack (e.g., Python, Ruby). </li>
+            <br />
+            <li>After earning the necessary degree the next step would be to find an entry level job where there are prospects to gain experience.  </li>
+            <br />
+            <li>Software engineering is precise and technical, thus gaining certification verifies an applicant’s knowledge and abilities. Along with experience, certification can improve a person’s marketability. Certifications are available from technology vendors (e.g., Microsoft, Cisco and Oracle) as well as professional organizations (e.g., IEEE) and are tailored to specific areas of practice. </li>
+            <br />
+            <li>Following up with a Master’s Degree will offer opportunities to qualify for management and leadership positions in the industry. </li>
           </ol>
         </p>
       </div>
