--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -32,7 +32,7 @@
       <p>Let us suppose that a group of venture capitalists hears about your project, and is so impressed that they wish to fund you to develop it further for say six months. You will be the manager of a team of 4 people to deliver the project outcomes. What position description would be appropriate? Write 4 position descriptions for people that you would employ to take your project to the next phase. You will need to consider what skills are appropriate, which may include specific technical expertise, team work experience, leadership and management techniques, and innovative thinking. </p>
       <br />
       <h3>Front End Web Developer</h3>
-      <p><!-- Insert text here, two <br /> between paragraphs (not after </p>) --></p>
+      <p>We require a web developer to be responsible for implementing visual elements that users see and interact with in a web application. They are usually supported by back-end web developers, who are responsible for server-side application logic and integration of the work front-end developers do. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use, Mking the project more attractive to potential clients.  </p>
       <br />
       <h3>Back End Application Developer</h3>
       <p><!-- Insert text here, two <br /> between paragraphs (not after </p>) --></p>
@@ -61,11 +61,17 @@
       <br />
       <h3>Skills Required</h3>
       <ul>
-        <li></li>
+        <li>HTML5; </li>
+        <li>PHP;  </li>
+        <li>JavaScript;  </li>
+        <li>Frameworks such as AngluarJs or Angular; </li>
+        <li>Responsive design; </li>
+        <li>Testing and debugging. </li>
       </ul>
       <br />
       <h3>Qualifications Required</h3>
-      <p></p>
+      <p>A minimum of a bachelor's degree in computer science or equivalent. </p>
+      <p>We are looking for someone with 3 to 5 years' experience in front end web development, who can work well with a team, following a consisted development methodology such as Scrum or Agile.   </p>
     </div>
     <!-- For Back End -->
     <div id="Back" class="tabcontent">
