--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -32,7 +32,15 @@
       <p>Let us suppose that a group of venture capitalists hears about your project, and is so impressed that they wish to fund you to develop it further for say six months. You will be the manager of a team of 4 people to deliver the project outcomes. What position description would be appropriate? Write 4 position descriptions for people that you would employ to take your project to the next phase. You will need to consider what skills are appropriate, which may include specific technical expertise, team work experience, leadership and management techniques, and innovative thinking. </p>
       <br />
       <h3>Front End Web Developer</h3>
-      <p>We require a web developer to be responsible for implementing visual elements that users see and interact with in a web application. They are usually supported by back-end web developers, who are responsible for server-side application logic and integration of the work front-end developers do. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use, Mking the project more attractive to potential clients.  </p>
+      <p>A front end web developers skills are focused on building customer facing web applications. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use. 
+
+ 
+
+Technical skills required would be typical web design languages such as HTML5, PHP and JavaScript. Though we would be probably want to look at getting someone with some experience in a modern web framework such as AngluarJs or Angular. 
+
+ 
+
+We would be looking for a couple of years of experience, working in a team following a consisted development methodology such as Scrum or Agile.  (Note we would probably want to keep the methodology experience consistent across all role candidates)</p>
       <br />
       <h3>Back End Application Developer</h3>
       <p><!-- Insert text here, two <br /> between paragraphs (not after </p>) --></p>
@@ -57,7 +65,7 @@
     <div id="Front" class="tabcontent">
       <span onclick="this.parentElement.style.display='none'" class="topright"></span>
       <h2></h2>
-      <p></p>
+      <p>We require a web developer to be responsible for implementing visual elements that users see and interact with in a web application. They are usually supported by back-end web developers, who are responsible for server-side application logic and integration of the work front-end developers do. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use, Mking the project more attractive to potential clients.</p>
       <br />
       <h3>Skills Required</h3>
       <ul>
