--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -33,20 +33,12 @@
       <br />
       <h3>Front End Web Developer</h3>
       <p>A front end web developers skills are focused on building customer facing web applications. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use. 
-
- 
-
 Technical skills required would be typical web design languages such as HTML5, PHP and JavaScript. Though we would be probably want to look at getting someone with some experience in a modern web framework such as AngluarJs or Angular. 
-
- 
-
 We would be looking for a couple of years of experience, working in a team following a consisted development methodology such as Scrum or Agile.  (Note we would probably want to keep the methodology experience consistent across all role candidates)</p>
       <h3>Back End Application Developer</h3>
       <p><!-- Insert text here, two <br /> between paragraphs (not after </p>) --></p>
-      <br />
       <h3>Test Engineer</h3>
-      <p><!-- Insert text here, two <br /> between paragraphs (not after </p>) --></p>
-      <br />
+      <p>In order to ensure that the product is successful, a test engineer will ensure that the product actually works.  They will be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases, giving piece of mind that something else has not been broken somewhere along the line.  They will be able to test the API's built by the back end developer ensuring that they return appropriate results so the Front  end developer can focus on the front end know his/her source data is correct. </p>
       <h3>Dev-Ops Engineer</h3>
       <p><!-- Insert text here, two <br /> between paragraphs (not after </p>) --></p>
     </div>
@@ -68,12 +60,12 @@ We would be looking for a couple of years of experience, working in a team follo
       <br />
       <h3>Skills Required</h3>
       <ul>
-        <li>HTML5; </li>
-        <li>PHP;  </li>
-        <li>JavaScript;  </li>
+        <li>HTML5 </li>
+        <li>PHP  </li>
+        <li>JavaScript  </li>
         <li>Frameworks such as AngluarJs or Angular; </li>
-        <li>Responsive design; </li>
-        <li>Testing and debugging. </li>
+        <li>Responsive Design </li>
+        <li>Testing and Debugging. </li>
       </ul>
       <br />
       <h3>Qualifications Required</h3>
@@ -98,15 +90,19 @@ We would be looking for a couple of years of experience, working in a team follo
     <div id="Test" class="tabcontent">
       <span onclick="this.parentElement.style.display='none'" class="topright"></span>
       <h2></h2>
-      <p></p>
+      <p>We require a test engineer to work closely with software developers and program managers to iron out any bugs in the product, and improve the quality of the finished product. In order to ensure that the product is successful, a test engineer will ensure that the product actually works.  They will be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases, giving piece of mind that something else has not been broken somewhere along the line.  They will be able to test the API's built by the back end developer ensuring that they return appropriate results so the Front  end developer can focus on the front end know his/her source data is correct. </p>
       <br />
       <h3>Skills Required</h3>
       <ul>
-        <li></li>
+        <li>Ability to identify and capture test cases, trace test results to qualityrisk</li>
+        <li>Analytical Skills</li>
+        <li>Basic understanding of programming concepts</li>
+        <li>Ability to work in a team</li>
+        <li>Ability to stick to deadlines</li>
       </ul>
       <br />
       <h3>Qualifications Required</h3>
-      <p></p>
+      <p>We are looking for someone with 3 to 5 years' experience in test engineering, who can work well with a team, following a consisted development methodology such as Scrum or Agile.   </p>
     </div>
     <!-- For Dev Ops -->
     <div id="Dev" class="tabcontent">
