--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <button class="dropbtn">Project Items</button>
               <div class="dropdown-content">
                 <a href="pages/ProjectDescription.html">Project Description</a>
-                <a href="">Project Dashboard</a>
+                <a href="Assignment3/information.html">Project Dashboard</a>
               </div>
             </div>
           </li>
