--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
           <li><a href="pages/TeamProfile.html">Team Profile</a></li>
           <li><a href="pages/Tools-Tech.html">Tools and Technologies</a></li>
           <li><a href="pages/SkillsJobs.html">Skills and Jobs</a></li>
-          <li><a href="">Group Reflection</a></li>
+          <li><a href="pages/GroupRef.html">Group Reflection</a></li>
           <li class="nav-right">
             <div class="dropdown">
               <button class="dropbtn">Project Items</button>
               <div class="dropdown-content">
                 <a href="pages/ProjectDescription.html">Project Description</a>
-                <a href="Assignment3/information.html">Project Dashboard</a>
+                <a href="pages/information.html">Project Dashboard</a>
               </div>
             </div>
           </li>
