--- a/pages/TeamProfile.html
+++ b/pages/TeamProfile.html
@@ -12,13 +12,13 @@
           <li><a href="TeamProfile.html">Team Profile</a></li>
           <li><a href="Tools-Tech.html">Tools and Technologies</a></li>
           <li><a href="SkillsJobs.html">Skills and Jobs</a></li>
-          <li><a href="">Group Reflection</a></li>
+          <li><a href="GroupRef.html">Group Reflection</a></li>
           <li class="nav-right">
             <div class="dropdown">
               <button class="dropbtn">Project Items</button>
               <div class="dropdown-content">
                 <a href="ProjectDescription.html">Project Description</a>
-                <a href="">Project Dashboard</a>
+                <a href="information.html">Project Dashboard</a>
               </div>
             </div>
           </li>
