--- a/pages/ProjectDescription.html
+++ b/pages/ProjectDescription.html
@@ -128,6 +128,21 @@
       <div class="box">
         <p></p>
       </div>
+      <div class="title">
+        <h2>Scopes and Limits</h2>
+      </div>
+      <div class="box">
+        With a limited time frame, the scope of what will be developed as part of this project needs to be defined in order to contain the work required.  Two milestones exist which coincide with the pitch videos.   
+        <br>
+        <br>
+        The first milestone is at week six of the project. At this stage we will have a single client device measuring temperature and possibly water depth, logging these readings to a round robin database to have graphs generated regularly, and displayed on a single demonstration web site.  We will also have a a concept dashboard for the cloud based login created which will demonstrate the end goal. 
+        <br>
+        <br>
+        This project will be completed at the end of sixteen weeks, which is the second and final milestone. We will have multiple client devices communicating their data to the cloud service, to be displayed using the dashboard design from the first milestone.  
+        <br>
+        <br>
+        The use of certain technologies are considered outside the scope of the project and are assumed as existing knowledge.  This includes network connectivity, wireless or otherwise, and administration of IaaS platforms. 
+      </div>
       <p class="title" style="margin-top: 15px; margin-bottom: 15px;"><b>Team 18 - Creative Protocol&#169 2020</b></p>
     </main>
   </body>
