Added some project plan details

--- a/pages/ProjectDescription.html
+++ b/pages/ProjectDescription.html
@@ -31,13 +31,23 @@
       </div>
       <div class="box">
         <h3>Overview</h3>
-        <p></p>
+        <p>Our project is to build to develop an affordable, scalable aquaponics monitoring and automation solution for back yard hobbyists.  This product will delivered as a cloud platform, known as HAMS (Home Aquaponics Monitoring System), with the long term goal of native mobile to be integrated into the system.  It will involve client devices reporting back to a cloud service, allowing easy monitoring of environment variables and a customisable alerting system 
+
+Large scale automated systems exist for commercial aqua farming but the cost of these solutions make them unviable for the backyard farmer. Conversely, "do it yourself" style projects for monitoring and automating home aquariums also exist, typically using a Raspberry Pi or Arduino board and other consumer electronics to measure different environment factors and present this information on a web-based dashboard. We intend to expand on this idea, targeting environment variables that are core to combining aqua culture and hydroponics, either in a single back yard system or for multiple units on a larger property.  </p>
         <br />
         <h3>Motivation</h3>
-        <p></p>
+        <p>Two of the biggest issues in the world today are food security and climate change. Both these issues are significantly related. As land is cleared for farming, the balance of nature is upset. Crops of plants absorb significantly less carbon dioxide from the atmosphere than the forests that preceded them. Additionally, rainfall is effected by the clearing of forests, resulting in extended droughts in some areas. Traditional plant farming requires lots of water, with additional chemicals used for various reasons, this water tends to run out into local river systems along with trace chemicals causing further issues. 
+
+As our population increases more food is required, further increasing the need for farming and agriculture. Aquaponics is a resource efficient method of growing food, requiring less water than traditional farming, and the symbiotic relationship between the plants and sh results in less chemical additions, such as is the case with separate hydroponics and aquaculture methods. We hope that this project will allow enthusiasts an easy way to understand what is going on with their backyard hobby aquaponics. 
+
+Even if this project does not result in a financially viable product for home aquaponics use, we have specifically chosen to use technologies that are in common use in the IT industry right now. Some are mature, while others relativity new to the IT industry.  This way, as a group we will give ourselves exposure to technology that future employers may be interested in and even use it as a demonstration of our ability 
+
+ </p>
         <br />
         <h3>Landscape</h3>
-        <p></p>
+        <p>Currently the market for aquaponics monitoring systems has limited solutions for smaller operations, however the market is starting to expand in recent years to accommodate the increased popularity of the agriculture technique. Even more so, aquaponics enthusiasts starting out have limited affordable options available to them. Companies such as Bluelab and GroLine have monitoring systems available, with prices usually being $500 or more for a basic model with pH and temperature gauges, with limited customizability to the user experience and how data is accessed/stored. Some high end device models have the ability to send your data to a computer or email, however this comes at an increased cost. 
+
+The monitoring system we are suggesting will provide an affordable solution for enthusiasts and small businesses who are wanting to start using aquaponics, with scalability for future expansion. Information is stored in the cloud which is accessible by the user anywhere they have an internet connection via a web browser. The addition cloud technology will allow for expansion into additional features, such as sending a notification of a temperature change to a mobile app. </p>
       </div>
       <div class="title">
         <h2>Detailed Description</h2>
