--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -54,21 +54,29 @@ We would be looking for a couple of years of experience, working in a team follo
     <div id="Front" class="tabcontent">
       <span onclick="this.parentElement.style.display='none'" class="topright"></span>
       <h2></h2>
-      <p>We require a web developer to be responsible for implementing visual elements that users see and interact with in a web application. They are usually supported by back-end web developers, who are responsible for server-side application logic and integration of the work front-end developers do. They would need to be highly skilled in User Interface design to ensure that the product is intuitive and easy to use, Mking the project more attractive to potential clients.</p>
+      <p>Creative Protocol are seeking a web developer with 3 to 5 years' experience in front end web development, who can work well with a team, following a consisted development methodology such as Scrum or Agile. You will be  responsible for implementing visual elements that users see and interact with in a web application, work along side and supported by our back-end web developer, who will be responsible for server-side application logic and integration of the work you produce. We strive to create an amazing user experience so we place a strong emphasis on being able to create a user friendly interface that is like no other. This is an excellent opportunity to be part of a team with a culture of continuous improvement regarding our technologies and practices..</p>
       <br />
-      <h3>Skills Required</h3>
+      <h3>Summary of Responsibilities</h3>
       <ul>
-        <li>HTML5 </li>
-        <li>PHP  </li>
-        <li>JavaScript  </li>
-        <li>Frameworks such as AngluarJs or Angular; </li>
-        <li>Responsive Design </li>
-        <li>Testing and Debugging. </li>
+        <li>Develop usable, accessible, and beautiful user interfaces </li>
+        <li>Build reusable code and libraries for future use.  </li>
+        <li>Ensure the technical feasibility of UI/UX designs  </li>
+        <li>Optimisation of applications for speed and scalability </li>
+        <li>Manage your workload to meet agreed time frames. </li>
+        <li>Be responsible for gathering and evaluation of all user requirements, illustrating and 	presenting ideas, producing UI wireframes  </li>
+        <li>Proactively bring issues and problems to the attention of the team; generate, propose, and 	implement innovative solutions to solve them. </li>
       </ul>
       <br />
-      <h3>Qualifications Required</h3>
-      <p>A minimum of a bachelor's degree in computer science or equivalent. </p>
-      <p>We are looking for someone with 3 to 5 years' experience in front end web development, who can work well with a team, following a consisted development methodology such as Scrum or Agile.   </p>
+      <h3>About You</h3>
+      <ul>
+        <li>A minimum of a bachelor's degree in computer science or equivalent. </li>
+        <li>Possess a keen eye regarding a high level of detail and strive for pixel-perfect design across different web browsers and platforms  </li>
+        <li>Expert proficiency with front end web technologies such as HTML / CSS / Javascript  </li>
+        <li>A solid understanding of web design, accessibility, usability, search engine optimisation and information architecture  </li>
+        <li>PHP / MySQL Back end development </li>
+        <li>Frameworks such as AngluarJs or Angular </li>
+        <li>Understanding of cloud deployments with Docker and AWS  </li>
+        <li>Git version control (Github, Bitbucket etc) </li>
     </div>
     <!-- For Back End -->
     <div id="Back" class="tabcontent">
