Added MORE project plan details

--- a/pages/ProjectDescription.html
+++ b/pages/ProjectDescription.html
@@ -66,29 +66,36 @@ The monitoring system we are suggesting will provide an affordable solution for 
         <h3>Environment Variables</h3>
         <p><b>Water Temperature</b>
         <br />
-        </p>
+        A consistent water temperature is paramount for the health of sh. Increased growth rates is observed over the warmer months, though too hot a temperature (or too cold) can result in death.
+	</p>
         <br />
         <p><b>Water Levels</b>
         <br />
+	Both Fish and Plants require water to grow, measuring the water levels will not only allow the food and drain cycle to be timed and adjusted accordingly but would also indicate a pumping failure or excess loss of water. 
         </p>
         <br />
         <p><b>PH</b>
         <br />
+	The acidity/alkalinity of the water is also very important to ensure it is in a consistent state, both fish and plants have different PH tolerances depending on the species. Understanding the PH of the water will allow accurate decisions around what plants should be grown. 
         </p>
         <br />
         <p><b>Nitrate/Nitrite</b>
         <br />
+	If an aquaponics systems is working and properly balanced there should be little to no nitrate within the water of the fish tank. If there is, then this would indicate that either the biological filtering of the grow bed is not working or there are not enough plants to absorb the nitrate. Excessive nitrate within the fish tank water is detrimental to fish health and needs to be monitored. Unfortunately this environment variable is one of the most difficult to measure electronically. Some investigation will have to be done to determine whether this measurement is viable. A stop gap solution is to measure this using a chemical test kit and entering the result into the system manually at regular interviews. 
         </p>
         <br />
         <p><b>Sunlight</b>
         <br />
+	Measuring the amount of sunlight the aquaponics system receives will help in analysing growth during the different seasons. 
         </p>
       </div>
       <div class="title">
         <h2>Aims</h2>
       </div>
       <div class="box">
-        <p></p>
+        <p>The aim of this project will be to produce multiple client devices that record environment variables at regular intervals and communicate these to a cloud based service, with a web based dashboard to review this information.  We will use Raspberry Pi's as our client devices and IaaS provider such as Amazon Web Service to host cloud the cloud infrastructure required. 
+
+This project can be broken up into several smaller aims, which are listed in approximate order. </p>
         <br />
         <p><b>Concept Pi Client</b>
         <br />
